# blsq-pathways-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/pathways_mcp/: prompts.py  resources.py  server.py
src/pathways_mcp/prompts/: assumption_challenges.md  intervention_copilot.md  segment_deep_dive.md
src/pathways_mcp/resources/: awihs_bihar_india.md  awihs_kenya.md  awihs_northern_nigeria.md  ethics.md  interventions.md  lens.md
src/pathways_mcp/tools/: associations.py  metrics.py  segmentations.py
