[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathways-mcp-server"
version = "0.1.0"
description = "MCP server exposing the Pathways health segmentation platform"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pathways-mcp = "pathways_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
